# lumiere

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL.md  README.md  devlog.md  lumiere_spec.md  syntax_spec.md
.github/workflows/: ci.yml  release.yml
cmake/: LUMIEREConfig.cmake.in
docs/: README.md  cli.md  runtime-boundaries.md  vm-interpreter.md  vm-roadmap.md
examples/: analyse_collections.lum  bonjour.lum  objets_et_erreurs.lum  stdout.txt
examples/contrats/: Contrats.lum  Formatage.lum  main.lum  stdout.txt
examples/modules/: Statistiques.lum  main.lum  stdout.txt
include/lumiere/: lexer.hpp  source_file.hpp  token.hpp
include/lumiere/analysis/: analysis.hpp  inspection.hpp
include/lumiere/cfg/: cfg.hpp
include/lumiere/diagnostics/: diagnostic.hpp
include/lumiere/interpreter/: iinterpreter.hpp
include/lumiere/interpreter/runtime/: iruntime.hpp  native_args.hpp  runtime_argument.hpp  runtime_site.hpp  value.hpp
include/lumiere/interpreter/stdlib/: helpers.hpp  modules.hpp
include/lumiere/interpreter/tree_walker/: environment.hpp  runtime.hpp  tree_walker.hpp
include/lumiere/interpreter/vm/: bytecode.hpp  compiler.hpp  lir.hpp  vm.hpp
include/lumiere/lexer/: lexer.hpp  scanner.hpp  token.hpp  tokenizer.hpp
include/lumiere/parser/: ast.hpp  parser.hpp  printer.hpp  utf8.hpp
packaging/macos/pkg/Resources/: welcome.txt
packaging/windows/: lumiere.wxs
scripts/: build  install.ps1  install.sh  package_macos_pkg.sh  package_windows_msi.ps1  run  tests
src/: lexer.cpp  lumiere.cpp  token.cpp
src/analysis/: analysis.cpp  inspection.cpp
src/diagnostics/: diagnostic.cpp
src/interpreter/: stdlib_helpers.cpp
src/interpreter/runtime/: value.cpp
src/interpreter/stdlib/: aleatoire.cpp  chemin.cpp  fichier.cpp  luminet.cpp  luminet_platform.hpp  luminet_shared.hpp  lumitest.cpp  maths.cpp  temps.cpp  texte.cpp
src/interpreter/stdlib/luminet/: README.md  address_dns.cpp  canal_runtime.cpp  foundation.cpp  http_canal.cpp  http_server.cpp  http_values.cpp  luminet_platform_posix.cpp  luminet_platform_windows.cpp  protocol.cpp  shared.cpp  tcp_runtime.cpp  tcp_udp.cpp  udp_runtime.cpp
src/interpreter/tree_walker/: tree_walker.cpp  tree_walker_core.cpp  tree_walker_expr.cpp  tree_walker_modules.cpp  tree_walker_objects.cpp  tree_walker_runtime.cpp  tree_walker_sequences.cpp  tree_walker_stmt.cpp  tree_walker_types.cpp
src/interpreter/vm/: ast_to_lir.cpp  ast_to_lir.hpp  bytecode.cpp  compiler.cpp  disassembler.cpp  lir.cpp  lir_to_bytecode.cpp  lir_to_bytecode.hpp  native_globals.cpp  native_globals.hpp  vm.cpp  vm_error.hpp
src/lexer/: lexer.cpp  scanner.cpp  token.cpp  tokenizer.cpp
src/parser/: parser.cpp  utf8.cpp
tests/: test_analysis.cpp  test_cli_integration.cpp  test_interpreter_fixtures.cpp  test_lexer.cpp  test_parser.cpp  test_parser_fixtures.cpp  test_vm_lir.cpp  test_windows_header_compatibility.cpp
tests/fixtures/interpreter/collections_summary/: expected.stdout  main.lum
tests/fixtures/interpreter/error_traceback/: expected.stderr  main.lum
tests/fixtures/interpreter/expansive_language_tour/: Formatage.lum  expected.stdout  main.lum
tests/fixtures/interpreter/interface_contract_violation/: expected.stderr.contains  main.lum
tests/fixtures/interpreter/interface_contracts/: Contrats.lum  Formatage.lum  main.lum
tests/fixtures/interpreter/invalid_math_domain/: expected.stderr.contains  main.lum
tests/fixtures/interpreter/invalid_named_builtin/: expected.stderr.contains  main.lum
tests/fixtures/interpreter/module_syntax_error/: Broken.lum  expected.stderr.contains  main.lum
tests/fixtures/interpreter/modules_and_aliases/: MathsUtiles.lum  expected.stdout  main.lum
tests/fixtures/interpreter/nested_module_graph/: expected.stdout  main.lum
tests/fixtures/interpreter/nested_module_graph/services/: Calculs.lum  Textes.lum
tests/fixtures/interpreter/objects_and_inheritance/: expected.stdout  main.lum
tests/fixtures/interpreter/private_access_error/: expected.stderr.contains  main.lum
tests/fixtures/interpreter/selective_import_internal_error/: Cache.lum  expected.stderr.contains  main.lum
tests/fixtures/interpreter/stdin_booleans/: main.lum  stdin.txt
tests/fixtures/interpreter/try_catch_finally/: expected.stdout  main.lum
tests/fixtures/interpreter/unhandled_throw/: expected.stderr  main.lum
tests/fixtures/parser/agir_selon_complex/: expected.ast  main.lum
tests/fixtures/parser/class_and_override/: expected.ast  main.lum
tests/fixtures/parser/full_surface_combo/: expected.ast  main.lum
tests/fixtures/parser/function_generics/: expected.ast  main.lum
tests/fixtures/parser/imports_and_visibility/: expected.ast  main.lum
tests/fixtures/parser/interface_contracts_deep/: expected.ast.contains  main.lum
tests/fixtures/parser/invalid_import/: expected.error  main.lum
tests/fixtures/parser/malformed_generic/: expected.error  main.lum
tests/fixtures/parser/nested_modules_and_interface/: expected.ast  main.lum
tests/fixtures/parser/try_agir_selon_contains/: expected.ast.contains  main.lum
